// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Menu with Options 1`] = `
<ul
  className="ola_menu"
>
  <li
    className=""
  >
    <a
      className="ola_menu-option"
      variant={null}
    >
      Option 1
    </a>
  </li>
  <li
    className=""
  >
    <a
      className="ola_menu-option"
      variant={null}
    >
      Option 2
    </a>
  </li>
</ul>
`;

exports[`Default Menu with separator items 1`] = `
<ul
  className="ola_menu"
>
  <li
    className=""
  >
    <a
      className="ola_menu-option"
      variant={null}
    >
      Option 1
    </a>
  </li>
  <li
    className="ola_menu-separator"
  >
    <a
      className="ola_menu-option"
      variant={null}
    >
      Option 2
    </a>
  </li>
  <li
    className=""
  >
    <a
      className="ola_menu-option"
      variant={null}
    >
      Option 3
    </a>
  </li>
  <li
    className="ola_menu-separator"
  >
    <a
      className="ola_menu-option"
      variant={null}
    >
      Option 4
    </a>
  </li>
</ul>
`;

exports[`Options are links 1`] = `
<ul
  className="ola_menu"
>
  <li
    className=""
  >
    <a
      className="ola_menu-option"
      href="link1"
      variant={null}
    >
      Option 1
    </a>
  </li>
  <li
    className=""
  >
    <a
      className="ola_menu-option"
      href="link2"
      variant={null}
    >
      Option 2
    </a>
  </li>
</ul>
`;
